@@ -346,13 +346,10 @@ public class Fetcher extends Configured implements Tool, MapRunnable<WritableCom
           }
         }
         
-        if (!parsing) {
-          /* Store status code in content if we are not parsing in fetcher. 
-           * So we can read this value during parsing (as a separate job) and
-           * decide to parse or not.
-           * */
-          content.getMetadata().add(Nutch.FETCH_STATUS_KEY, Integer.toString(status));
-        }
+        /* Store status code in content So we can read this value during 
+         * parsing (as a separate job) and decide to parse or not.
+         */
+        content.getMetadata().add(Nutch.FETCH_STATUS_KEY, Integer.toString(status));
       }
 
       try {
