@@ -271,6 +271,9 @@ Unreleased changes (1.0-dev)
 99. NUTCH-375 - Add support for Content-Encoding: deflated
     (Pascal Beis, ab)
 
+100. NUTCH-633 - ParseSegment no longer allow reparsing.
+     (dogacan)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
